--- a/package.json
+++ b/package.json
@@ -1,23 +1,22 @@
 {
   "name": "badge-generator",
   "private": true,
-  "version": "1.0.0",
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
+    "build": "vite build",
     "lint": "eslint .",
-    "start": "vite preview --port $PORT"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.18",
-    "html2canvas": "^1.4.1",
-    "jspdf": "^2.5.1",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
+    "jspdf": "^2.5.1",
+    "html2canvas": "^1.4.1",
+    "@headlessui/react": "^1.7.18",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
@@ -35,8 +34,5 @@
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
     "vite": "^5.4.2"
-  },
-  "engines": {
-    "node": ">=18.0.0"
   }
 }
